test/FAIL/dispcmd/invalid_arguments/05_test_disp.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="invalid argument"
#-------

load boucle.o
disp mem 0x1000+
